--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Base de datos en node para Previser",
   "main": "index.js",
   "scripts": {
-    "build": "babel src --out-dir dist",
+    "build": "babel src --out-dir dist && cp .env ./dist/.env",
     "dev": "nodemon src/index.js --exec babel-node",
     "start": "node dist/index.js",
     "swagger-autogen": "babel-node src/swagger.js"
